hard-gists/4023068/run.log
=== Docker Run Log for 4023068 ===
Started at: Mi 29. Okt 14:17:51 CET 2025

[2025-10-29 14:17:52] START: Running container for 4023068
[2025-10-29 14:17:52] SUCCESS: Container 359d4bcca386d50722e465fde9daefa3c813e9c5bcd1d995230c0da70dfb5787 started for 4023068
=== Container logs for 4023068 ===
  File "/snippet.py", line 12
    print res.get()
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4023068 ===
[2025-10-29 14:17:54] INFO: Container 359d4bcca386d50722e465fde9daefa3c813e9c5bcd1d995230c0da70dfb5787 has stopped
